--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,16 @@
 	<name>Simple Ecomerce Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<distributionManagement>
-   
+    <repository>
+        <id>central</id>
+        <name>ip-172-31-10-127.ap-south-1.compute.internal-releases</name>
+        <url>http://3.110.223.194:8081/artifactory/etoe</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>ip-172-31-10-127.ap-south-1.compute.internal-snapshots</name>
+        <url>http://3.110.223.194:8081/artifactory/etoe</url>
+    </snapshotRepository>
 </distributionManagement>
 	<dependencies>
 		<dependency>
