--- a/.github/workflows/mymaven.yml
+++ b/.github/workflows/mymaven.yml
@@ -29,5 +29,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: deploy app to tomcat
+      run: curl -v -u admin:admin -T /home/runner/work/etoe/etoe/target/Ecomm.war 'http://13.233.15.227:8080/manager/html/undeploy?path=/Ecomm.war'
+
 
    
