--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,5 +28,7 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: deploy ecomm to tomcat
+      run: curl -v -u admin:admin -T /home/runner/work/etoe/etoe/target/Ecomm.war  'http://13.203.202.3:8080/manager/text/deploy?path=/Ecomm.war'
 
    
