--- a/.github/workflows/buildproject.yml
+++ b/.github/workflows/buildproject.yml
@@ -29,5 +29,7 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Deploy war to tomcat
+      run: curl -v -u admin:admin -T /home/runner/work/etoe/etoe/target/Ecomm.war 'http://3.110.168.193:8080/manager/text/deploy?path=%2FEcomm'
 
   
