--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -15,4 +15,6 @@ jobs:
         cache: maven
     - name: Build with maven   
       run: mvn -B package --file pom.xml
+    - name: deploy ecomm to tomcatserver-running inside Ec2  
+      run: curl -v -u admin:admin -T /home/runner/work/etoe/etoe/target/Ecomm.war 'http://13.235.103.179:8080/manager/text/deploy?path=/Ecomm.war'
         
