--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,5 +29,6 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-
+    - name: deploy to tomcat
+      run: curl -v -u admin:admin -T /home/runner/work/etoe/etoe/target/Ecomm.war 'http://13.235.103.179:8080/manager/text/deploy?path=/Ecomm.war'
    
