--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,5 +30,8 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: deploy eapp to tomcat server
-      run:  curl -v -u admin:admin -T /home/runner/work/etoe/etoe/target/Ecomm.war 'http://13.232.139.41:8080/manager/text/deploy?path=/Ecomm.war'
+      env:
+          tomcat_user: ${{secrets.UID}}
+          tomcat_pwd: ${{secrets.PWD}}
+      run:  curl -v -u  -T $tomcat_user:$tomcat_pwd /home/runner/work/etoe/etoe/target/Ecomm.war 'http://13.232.139.41:8080/manager/text/deploy?path=/Ecomm.war'
 
