--- a/pom.xml
+++ b/pom.xml
@@ -1,47 +1,75 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>MyEcommerceGroup</groupId>
-	<artifactId>MyEcommerceArtifact</artifactId>
-	<packaging>war</packaging>
-	<version>1.0-SNAPSHOT</version>
-	<name>Simple Ecomerce Maven Webapp</name>
-	<url>http://maven.apache.org</url>
-	<distributionManagement>
-    <repository>
-        <id>central</id>
-        <name>ip-172-31-10-127.ap-south-1.compute.internal-releases</name>
-        <url>http://3.110.223.194:8081/artifactory/etoe</url>
-    </repository>
-    <snapshotRepository>
-        <id>snapshots</id>
-        <name>ip-172-31-10-127.ap-south-1.compute.internal-snapshots</name>
-        <url>http://3.110.223.194:8081/artifactory/etoe</url>
-    </snapshotRepository>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<modelVersion>4.0.0</modelVersion>
+<groupId>MyEcommerceGroup</groupId>
+<artifactId>MyEcommerceArtifact</artifactId>
+<packaging>war</packaging>
+<version>1.0-SNAPSHOT</version>
+<name>Simple Ecommerce Maven Webapp</name>
+<url>http://maven.apache.org</url>
+<!--  Artifact publish (only for Artifactory, not Tomcat)  -->
+<distributionManagement>
+<repository>
+<id>central</id>
+<name>Releases</name>
+<url>http://3.110.223.194:8081/artifactory/etoe</url>
+</repository>
+<snapshotRepository>
+<id>snapshots</id>
+<name>Snapshots</name>
+<url>http://3.110.223.194:8081/artifactory/etoe</url>
+</snapshotRepository>
 </distributionManagement>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-	<build>
-		<finalName>Ecomm</finalName>
-		<plugins>
-			<plugin> 
-				<groupId>org.apache.tomcat.maven</groupId> 
-				<artifactId>tomcat7-maven-plugin</artifactId> 
-				<version>2.2</version> 
-				<configuration> 
-					 <url>http://13.127.52.81:8080/manager/text</url>
-					<server>apache-tomcat</server> 
-					<username>admin</username>
-					<password>admin</password>
-					<path>/Ecomm</path> 
-				</configuration> 
-			</plugin>
-		</plugins>
-	</build>
+<dependencies>
+<!--  Updated JUnit version  -->
+<dependency>
+<groupId>junit</groupId>
+<artifactId>junit</artifactId>
+<version>4.13.2</version>
+<scope>test</scope>
+</dependency>
+</dependencies>
+<build>
+<finalName>Ecomm</finalName>
+</build>
+<!--  Profiles for dev and qa deployments  -->
+<profiles>
+<profile>
+<id>dev</id>
+<build>
+<plugins>
+<plugin>
+<groupId>org.apache.tomcat.maven</groupId>
+<artifactId>tomcat7-maven-plugin</artifactId>
+<version>2.2</version>
+<configuration>
+<url>http://65.1.248.150:8080/manager/text</url>
+<server>apache-tomcat</server>
+<username>admin</username>
+<password>admin</password>
+<path>/Ecomm</path>
+</configuration>
+</plugin>
+</plugins>
+</build>
+</profile>
+<profile>
+<id>qa</id>
+<build>
+<plugins>
+<plugin>
+<groupId>org.apache.tomcat.maven</groupId>
+<artifactId>tomcat7-maven-plugin</artifactId>
+<version>2.2</version>
+<configuration>
+<url>http://65.2.57.185:8080/manager/text</url>
+<server>apache-tomcat</server>
+<username>admin</username>
+<password>admin</password>
+<path>/Ecomm</path>
+</configuration>
+</plugin>
+</plugins>
+</build>
+</profile>
+</profiles>
 </project>
