--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
             <artifactId>tomcat7-maven-plugin</artifactId>
             <version>2.2</version>
             <configuration>
-              <url>http://65.1.248.150:8080/manager/text</url>
+              <url>http://13.203.74.58:8080/manager/text</url>
               <server>apache-tomcat</server>
               <username>admin</username>
               <password>admin</password>
@@ -71,7 +71,7 @@
             <artifactId>tomcat7-maven-plugin</artifactId>
             <version>2.2</version>
             <configuration>
-              <url>http://65.2.57.185:8080/manager/text</url>
+              <url>http://13.203.194.73:8080/manager/text</url>
               <server>apache-tomcat</server>
               <username>admin</username>
               <password>admin</password>
@@ -81,6 +81,32 @@
         </plugins>
       </build>
     </profile>
-  </profiles>
+
+
+<profile>
+      <id>prod</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+              <url>http://13.203.212.201:8080/manager/text</url>
+              <server>apache-tomcat</server>
+              <username>admin</username>
+              <password>admin</password>
+              <path>/Ecomm</path>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+
+
+
+
+</profiles>
 
 </project>
